# dbt_bigquery_template

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  dbt_project.yml  init.sh  pyproject.toml  requirements.txt
.dbt/: profiles.yml
.devcontainer/: Dockerfile  devcontainer.json
models/: schema.yml  test1.sql  test2.sql
